Unreleased Version 2.2.0-pre

2023-06-21 Version 2.2.0-beta.5
 * Made the new default theme *actually* the default theme, don't sync it with the theme from Drawpile 2.1.
 * Fixed saving and loading settings even when Drawpile 2.1 corrupted them.
 * Fixed saving of shortcuts and probably also some other settings that didn't let you clear stuff anymore.
 * Allowed ordering of list servers in the preferences again.
 * Made chat pins work properly again.
 * Allowed color picking when using the selection tool again.
 * Brought back the old averaging smoothing, as another option in addition to the new time-based stabilizer.
 * Miscellaneous fixes and prettifications in the settings dialog.
 * Fixed stabilizer settings being forgotten when closing the program.
 * Non-floating selections now stick around after hitting Delete, since you might want to delete on multiple layers.
 * Fixed some crashes when closing the window when it's in a funky state.
 * Made settings only save to disk when you're not doing anything in the program, to avoid causing chugging on slow disks.
 * Fixed Copy Merged to actually work and not just copy a blank rectangle.
 * Fixed floating docks not being resizable on macOS.
 * Fixed pasting images with weird color formats.
 * Added an NSFM option to the host dialog, letting you turn that on right from the get-go.
 * Called NSFM the same everywhere in the program, instead of mixing up "NSFM", "NSFW" and "age-restricted" in different places.
 * Added a context menu to the join dialog, if you want to copy stuff out of there.
 * Made popup messages ("Connecting..." and such) work on Wayland.
 * Made nearest-neighbor transform actually work, it ended up being forced to bilinear every time.
 * Made the stabilizer not run at a really low framerate on Windows.
 * Split Shortcuts and Canvas Shortcuts into two settings pages again.
 * Fixed shortcuts not getting assigned when closing the preferences without clicking somewhere else first.