@@ -1,4 +1,5 @@
 Unreleased Version 2.2.0-pre
+ * Fix: Don't forget account password when entering a wrong session password.
 
 2023-06-21 Version 2.2.0-beta.5
  * Made the new default theme *actually* the default theme, don't sync it with the theme from Drawpile 2.1.
